--- a/templates/ask.html
+++ b/templates/ask.html
@@ -31,7 +31,8 @@
                     
                     <div class="button-group">
                         <button type="submit" class="btn-primary">Get Answer</button>
-                        <a href="/reset" class="btn-secondary">Upload New PDFs</a>
+                        <a href="/generate_quiz" class="btn-secondary">Generate Quiz (5 Questions)</a>
+                        <a href="/reset" class="btn-secondary">Upload New Documents</a>
                     </div>
                 </form>
             </div>
